--- a/off-topic.html
+++ b/off-topic.html
@@ -378,7 +378,7 @@
             </i>
           </label>
           <input placeholder="Message #off-topic-discussions" id="message-input">
-          <button style="display: none;"></button>
+          <button style="position:fixed; top:-100px;"></button>
           <i class="fa-solid fa-gift"></i>
           <i class="fa-gif">GIF</i>
           <i class="fa-solid fa-note-sticky"></i>
