--- a/frontend-discussions.html
+++ b/frontend-discussions.html
@@ -290,7 +290,7 @@
             </i>
           </label>
           <input placeholder="Message #frontend-discussions" id="message-input">
-          <button style="display: none;"></button>
+ <button style="position:fixed; top:-100px;"></button>
           <i class="fa-solid fa-gift"></i>
           <i class="fa-gif">GIF</i>
           <i class="fa-solid fa-note-sticky"></i>
