--- a/off-topic.html
+++ b/off-topic.html
@@ -336,7 +336,7 @@
               </div>
             </div>
           </div>
-          <div class="message" id="last-message">
+          <div class="message">
             <div class="message-icons">
               <i class="fa-solid fa-face-smile"></i>
               <i class="fa-solid fa-reply"></i>
