--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <div class="note">
-    <div>
+    <div class="inner-note">
       <p class="note-title">Note</p>
       <p>This website is not optimized for small screens (e.g., mobile phones). For the best experience, please use a
         larger screen (e.g., laptop) or rotate your mobile phone's screen.</p>
