--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -120,7 +123,7 @@
   <section id="main-section" class="main-section">
 
 
-    <nav class="main-header"> 
+    <nav class="main-header">
       <i class="fa-solid fa-arrow-left" id="show-left-section-button"></i>
       <span class="channel-name"> <span class="hash">#</span> community-announcements</span>
       <i class="fa-solid fa-pen-to-square"><span class="tooltip">Threads</span></i>
