--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <div class="note">
     <div class="inner-note">
       <p class="note-title">Note</p>
-      <p>This website is not optimized for small screens (e.g., mobile phones). For the best experience, please use a
-        larger screen (e.g., laptop) or rotate your mobile phone's screen.</p>
-      <img src="Images/rotate.gif">
+      <p>This website is currently being optimized for small screens (e.g., mobile phones). For the current best experience, please use a
+        larger screen (e.g., laptop)</p>
+
       <label for="note-checkbox"><span>OK</span></label>
       <input type="checkbox" id="note-checkbox">
     </div>
