--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title></title>
+  <title>Discord - nerds' community</title>
   <link rel="stylesheet" href="Styles/General.css" />
   <link rel="stylesheet" href="Styles/Servers.css" />
   <link rel="stylesheet" href="Styles/Channels.css" />
