--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <div class="note">
+  <!-- <div class="note">
     <div class="inner-note">
       <p class="note-title">Note</p>
       <p>This website is currently being optimized for small screens (e.g., mobile phones). For the current best experience, please use a
@@ -29,7 +29,7 @@
       <label for="note-checkbox"><span>OK</span></label>
       <input type="checkbox" id="note-checkbox">
     </div>
-  </div>
+  </div> -->
 
   <div id="left-section">
     <section class="servers-section">
