--- a/frontend-announcements.html
+++ b/frontend-announcements.html
@@ -71,7 +71,7 @@
               <input type="checkbox" id="category-1-checkbox" checked />
             </div>
           </label>
-          <a class="channels" href="index.html"># community-announcements</a>
+          <a class="channels" href="community-announcements.html"># community-announcements</a>
           <a class="channels" href="off-topic.html"># off-topic-discussions</a>
         </div>
 
@@ -96,7 +96,7 @@
           <div class="user-info">
             <p id="user-name">amr</p>
             <div class="user-status">
-              <p class="user-status-text">idc anymore</p>
+              <p class="user-status-text">online</p>
               <p>amrx64</p>
             </div>
           </div>
@@ -119,7 +119,7 @@
       <i class="fa-solid fa-thumbtack"><span class="tooltip">Pinned Messages</span></i>
       <label for="member-list-checkbox"><i class="fa-solid fa-user-group"><span class="tooltip">Member
             List</span>
-          <input type="checkbox" id="member-list-checkbox" style="display: none;">
+          <input type="checkbox" id="member-list-checkbox" style="display: none;" checked>
         </i>
 
       </label> <input placeholder="Search">
@@ -215,15 +215,18 @@
 
       <section class="members-section">
 
-        <p class="role-text">FRONTEND DEVELOPERS - 2</p>
+        <p class="role-text">FRONTEND DEVELOPERS - 1</p>
+
+        <p class="role-text">
+          OFFLINE - 6
+        </p>
 
 
         <!-- amr -->
         <label for="focus-button1">
-          <div class="member-container">
-
-            <div class="member-img-container ">
-              <div class="member-img member-online"><img src="Images/amr.jpg" /></div>
+          <div class="member-container member-offline">
+            <div class="member-img-container">
+              <div class="member-img"><img src="Images/amr.jpg" /></div>
               <div class="member-overview">
                 <div class="upper-overview" style="background-image: url('Images/amr-back.jpg'); ">
                   <div class="member-img-overview member-online"><img src="Images/amr.jpg" /></div>
@@ -232,7 +235,7 @@
                   <p class="member-name">amr</p>
                   <p class="member-username">amrx64</p>
 
-                  <p class="member-bio">hey there, tell me about your day. And remember that you are awesome</p>
+                  <p class="member-bio">hi</p>
                   <div class="roles">
                     <p class="role bf-orange">Admin</p>
                     <p class="role bf-yellow">Frontend Developers</p>
@@ -245,48 +248,12 @@
 
             <div class="member-info">
               <p class="member-name fc-orange">amr <i class="fa-solid fa-crown fs-12"></i></p>
-              <span class="member-status member-status-active">idc anymore</span>
+              <span class="member-status member-status-active"></span>
             </div>
             <input type="checkbox" id="focus-button1" class="focus-button">
 
           </div>
         </label>
-
-        <!-- moamen -->
-        <label for="focus-button2">
-          <div class="member-container">
-            <div class="member-img-container">
-              <div class="member-img member-online-phone"><img src="Images/moamen.jpg" /></div>
-              <div class="member-overview">
-                <div class="upper-overview">
-                  <div class="member-img-overview member-online"><img src="Images/moamen.jpg" /></div>
-                </div>
-                <div class="lower-overview">
-                  <p class="member-name">Moamen</p>
-                  <p class="member-username">moamen7halaf</p>
-                  <div class="matual">2 Mutual Friends &#x2022; 1 Matual Servers</div>
-                  <p class="member-bio">https://github.com/Moamen-Khalaf</p>
-                  <div class="roles">
-                    <p class="role bf-yellow">Frontend Developers</p>
-                  </div>
-                  <input type="text" placeholder="Message @Moamen">
-                </div>
-              </div>
-
-            </div>
-
-            <div class="member-info">
-              <p class="member-name fc-yellow">Moamen</p>
-              <span class="member-status">اللي مش هيحل هيتفلتر</span>
-            </div>
-            <input type="checkbox" id="focus-button2" class="focus-button">
-          </div>
-        </label>
-
-        <p class="role-text">
-          OFFLINE - 2
-        </p>
-
         <!-- mazen -->
         <label for="focus-button3">
           <div class="member-container member-offline">
@@ -299,7 +266,7 @@
                 <div class="lower-overview">
                   <p class="member-name">mazen_3lwany</p>
                   <p class="member-username">mazen_3lwany</p>
-                  <div class="matual">2 Mutual Friends &#x2022; 1 Matual Servers</div>
+                  <div class="Mutual">2 Mutual Friends &#x2022; 1 Mutual Servers</div>
                   <p class="member-bio"></p>
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
@@ -332,7 +299,7 @@
                 <div class="lower-overview">
                   <p class="member-name">Moatasem</p>
                   <p class="member-username">moatasem2569</p>
-                  <div class="matual">5 Mutual Friends &#x2022; 2 Matual Servers</div>
+                  <div class="Mutual">5 Mutual Friends &#x2022; 2 Mutual Servers</div>
                   <p class="member-bio"></p>
                   <div class="roles">
                     <p class="role bf-yellow">Frontend Developers</p>
@@ -349,6 +316,132 @@
             <input type="checkbox" id="focus-button4" class="focus-button">
           </div>
         </label>
+
+        <!-- mohamed -->
+        <label for="focus-button7">
+          <div class="member-container member-offline">
+            <div class="member-img-container">
+              <div class="member-img "><img src="Images/mohamed.jpg" /></div>
+
+              <div class="member-overview">
+                <div class="upper-overview">
+                  <div class="member-img-overview"><img src="Images/mohamed.jpg" /></div>
+                </div>
+                <div class="lower-overview">
+                  <p class="member-name">Mohamed</p>
+                  <p class="member-username">Mohamed97539</p>
+                  <div class="Mutual">5 Mutual Friends &#x2022; 2 Mutual Servers</div>
+                  <p class="member-bio">https://github.com/moh123mos/</p>
+                  <div class="roles">
+                    <p class="role bf-yellow">Frontend Developers</p>
+                  </div>
+                  <input type="text" placeholder="Message @Mohamed">
+                </div>
+              </div>
+            </div>
+
+            <div class="member-info">
+              <p class="member-name fc-yellow">Mohamed</p>
+              <span class="member-status"></span>
+            </div>
+            <input type="checkbox" id="focus-button7" class="focus-button">
+          </div>
+        </label>
+        <!-- moamen -->
+        <label for="focus-button2">
+          <div class="member-container member-offline">
+            <div class="member-img-container">
+              <div class="member-img"><img src="Images/moamen.jpg" /></div>
+              <div class="member-overview">
+                <div class="upper-overview">
+                  <div class="member-img-overview member-online"><img src="Images/moamen.jpg" /></div>
+                </div>
+                <div class="lower-overview">
+                  <p class="member-name">Moamen</p>
+                  <p class="member-username">moamen7halaf</p>
+                  <div class="Mutual">2 Mutual Friends &#x2022; 1 Mutual Servers</div>
+                  <p class="member-bio">https://github.com/Moamen-Khalaf</p>
+                  <div class="roles">
+                    <p class="role bf-yellow">Frontend Developers</p>
+                  </div>
+                  <input type="text" placeholder="Message @Moamen">
+                </div>
+              </div>
+
+            </div>
+
+            <div class="member-info">
+              <p class="member-name fc-yellow">Moamen</p>
+              <span class="member-status">اللي مش هيحل هيتفلتر</span>
+            </div>
+            <input type="checkbox" id="focus-button2" class="focus-button">
+          </div>
+        </label>
+        <!-- sara -->
+        <label for="focus-button6">
+          <div class="member-container member-offline">
+            <div class="member-img-container">
+              <div class="member-img "><img src="Images/sara.jpg" /></div>
+
+              <div class="member-overview">
+                <div class="upper-overview">
+                  <div class="member-img-overview"><img src="Images/sara.jpg" /></div>
+                </div>
+                <div class="lower-overview">
+                  <p class="member-name">Sara</p>
+                  <p class="member-username">sara_</p>
+                  <div class="Mutual">1 Mutual Servers</div>
+                  <p class="member-bio"></p>
+                  <div class="roles">
+                    <p class="role bf-yellow">Frontend Developers</p>
+                  </div>
+                  <input type="text" placeholder="Message @Sara">
+                </div>
+              </div>
+            </div>
+
+            <div class="member-info">
+              <p class="member-name fc-yellow">Sara</p>
+              <span class="member-status"></span>
+            </div>
+            <input type="checkbox" id="focus-button6" class="focus-button">
+          </div>
+        </label>
+        <!-- shahd -->
+        <label for="focus-button5">
+          <div class="member-container member-offline">
+            <div class="member-img-container">
+              <div class="member-img "><img src="Images/shahd.jpg" /></div>
+
+              <div class="member-overview">
+                <div class="upper-overview">
+                  <div class="member-img-overview"><img src="Images/shahd.jpg" /></div>
+                </div>
+                <div class="lower-overview">
+                  <p class="member-name">Shahd</p>
+                  <p class="member-username">shahd22</p>
+                  <div class="Mutual">1 Mutual Servers</div>
+                  <p class="member-bio"></p>
+                  <div class="roles">
+                    <p class="role bf-yellow">Frontend Developers</p>
+                  </div>
+                  <input type="text" placeholder="Message @Shahd">
+                </div>
+              </div>
+            </div>
+
+            <div class="member-info">
+              <p class="member-name fc-yellow">Shahd</p>
+              <span class="member-status"></span>
+            </div>
+            <input type="checkbox" id="focus-button5" class="focus-button">
+          </div>
+        </label>
+
+
+
+
+
       </section>
 
 
@@ -357,6 +450,7 @@
   </section>
   <script src="Script/Message.js"></script>
   <script src="Script/Mobile.js"></script>
+  <script src="Script/User.js"></script>
 </body>
 
 </html>
